2000-06-22  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/platform.h: Avoid using #if ! to avoid
	bugs in the VC++ preprocessor.

2000-06-07  Mo DeJong  <mdejong@redhat.com>

	* src/control.cpp (ProcessSubdirectories):
	Fixed up compiler warnings in the Windows code.
	* src/jikesapi.cpp (DefaultFileReader):
	Added check for number of bytes read.
	* src/option.cpp (Option): Reorder
	declarations to make compiler happy.
	* src/platform.cpp (IntToString, IntToWstring):
	Avoid compiler warnings.
	* src/stream.cpp (ProcessInputUnicode):
	Avoid compiler warnings. Added FIXME.

2000-06-06  Mo DeJong  <mdejong@redhat.com>

	* configure: Regen to fix Solaris build.
	* configure.in: Removed some comments,
	fixed up a minor path issue.
	* src/stamp-h.in: Regen.

2000-06-03  Mo DeJong  <mdejong@redhat.com>

	* src/decl.cpp (CheckPackage): Removed
	error generated by jikes when a package
	named in a package statement could not
	be found on the CLASSPATH. This behavior
	did not match javac or other compilers
	and it makes it very difficult to use
	jikes for regression testing.

2000-05-30  Mo DeJong  <mdejong@cygnus.com>

	* src/config.cpp:
	* src/config.h: Removed. These two
	files were part of the old build
	system. They should have been removed
	when the new build system was merged.

2000-05-23  Mo DeJong  <mdejong@cygnus.com>

	* Makefile.in:
	* src/Makefile.in: Removed to make way for
	new automake based build system.

	* AUTHORS:
	* COPYING:
	* INSTALL:
	* Makefile.am:
	* Makefile.in:
	* NEWS:
	* acinclude.m4:
	* aclocal.m4:
	* autogen.sh:
	* configure.in:
	* doc/Makefile.am:
	* doc/Makefile.in:
	* src/Makefile.am:
	* src/Makefile.in:
	* src/stamp-h.in: Added or updated files to support
	automake version of the build system.

2000-05-22  Mo DeJong  <mdejong@cygnus.com>

	* src/error.cpp (PrintTYPED_METHOD_WITH_NO_RETURN):
	Fixed typo in error message.
	* src/zip.cpp (Zip): Removed extra semicolon.
	* src/m4/acx_check_pathname_style.m4: Removed comment.
